--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,27 @@
     box-sizing: border-box;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
 .red {
     color: red;
 }
+
+.nav {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.mese {
+    margin-left: 50px;
+    margin-right: 50px;
+    font-size: 25px;
+    color: green;
+}
+
